%% Helix Thready — Master ERD (entity overview, relationships only)
%% Source of truth: docs/private/research/mvp/helix_thready_research_request_final.md §2.1
erDiagram
  accounts        ||--o{ memberships          : "has"
  users           ||--o{ memberships          : "joins"
  roles           ||--o{ memberships          : "grants"
  roles           ||--o{ role_permissions     : "bundles"
  permissions     ||--o{ role_permissions     : "in"
  accounts        ||--o{ roles                : "scopes"

  accounts        ||--o{ messenger_accounts   : "owns"
  messengers      ||--o{ messenger_accounts   : "typed_as"
  messenger_accounts ||--o{ channels          : "reads"
  accounts        ||--o{ channels             : "scopes"
  channels        ||--o{ threads              : "contains"
  channels        ||--o{ posts                : "contains"
  threads         ||--o| posts                : "root_of"
  threads         ||--o{ replies              : "assembles"
  posts           ||--o{ replies              : "answered_by"

  hashtags        ||--o{ post_hashtags        : "tags"
  posts           ||--o{ post_hashtags        : "tagged"
  hashtags        ||--o{ reply_hashtags       : "tags"
  replies         ||--o{ reply_hashtags       : "tagged"
  categories      ||--o{ post_categories      : "classifies"
  posts           ||--o{ post_categories      : "classified"
  categories      ||--o{ hashtag_categories   : "mapped"
  hashtags        ||--o{ hashtag_categories   : "mapped"

  posts           ||--|| processing_state     : "tracked_by"
  skills          ||--o{ skill_runs           : "executed_as"
  posts           ||--o{ skill_runs           : "runs"
  posts           ||--o{ generated_artifacts  : "produces"

  assets          ||--o{ asset_links          : "linked"
  posts           ||--o{ asset_links          : "attaches"
  replies         ||--o{ asset_links          : "attaches"
  generated_artifacts ||--o{ asset_links      : "attaches"
  assets          ||--o{ assets               : "rendition_of"

  accounts        ||--o{ events               : "emits"
  accounts        ||--o{ event_subscriptions  : "subscribes"
  users           ||--o{ event_subscriptions  : "owns"
  plans           ||--o{ subscriptions        : "sold_as"
  accounts        ||--o{ subscriptions        : "billed_by"
  accounts        ||--o{ usage_records        : "meters"
  accounts        ||--o{ invoices             : "invoiced"
  accounts        ||--o{ audit_log            : "audited"
  users           ||--o{ audit_log            : "acts"
